objects/Order_Fulfillment__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Delivery_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Ship_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carrier1__c</fullName>
        <formula>IF( BEGINS( Carrier__c , &quot;U&quot;), &quot;UPS&quot;,
 IF( BEGINS( Carrier__c , &quot;u&quot;), &quot;UPS&quot;,
  IF( BEGINS( Carrier__c , &quot;F&quot;), &quot;Fedex&quot;,
   IF( BEGINS( Carrier__c , &quot;f&quot;), &quot;Fedex&quot;,
    IF( BEGINS( Carrier__c , &quot;C&quot;), &quot;Conway Freight&quot;,
     IF( BEGINS( Carrier__c , &quot;c&quot;), &quot;Conway Freight&quot;, null
)
 )
  )
   )
    )
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Delivery_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Left_At__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Left At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>OE_Order__c</referenceTo>
        <relationshipLabel>Order Fulfillments</relationshipLabel>
        <relationshipName>Order_Fulfillments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_OFID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy OFID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Information__c</fullName>
        <formula>IF( Carrier1__c = &quot;UPS&quot;, HYPERLINK(&quot;http://wwwapps.ups.com/WebTracking/track?track=yes&amp;trackNums=&quot; &amp; Tracking_Number__c, &quot;Click Here&quot;), 
 IF( Carrier1__c = &quot;Fedex&quot;, HYPERLINK(&quot;https://www.fedex.com/apps/fedextrack/?action=track&amp;tracknumbers=&quot; &amp; Tracking_Number__c, &quot;Click Here&quot;),
  IF( Carrier1__c = &quot;Conway Freight&quot;, HYPERLINK(&quot;https://www.con-way.com/webapp/manifestrpts_p_app/shipmentTracking.do?PRO=&quot; &amp; Tracking_Number__c, &quot;Click Here&quot;), null
)
 )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPS_Full_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UPS Full Status</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Order Fulfillment</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Order Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Fulfillments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>